# csvtex

./: README.md  example.py  pyproject.toml
csvtex/: __init__.py  main.py
tests/: test_main.py
